--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,22 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shelterly</title>
-  </head>
-  <body>
-    <h1>All listings</h1>
-    <form action="/listings/new" method="GET">
-      <button>Create New Listing</button>
-    </form>
-    <!-- <a href="http://localhost:8080/listings/new">new listing</a> -->
-    <ul>
-      <% for(let listing of allListings) { %>
-      <li>
-        <a href="/listings/<%= listing._id %>"><%= listing.title %></a>
-      </li>
-      <% } %>
-    </ul>
-  </body>
-</html>
+<% layout("/layouts/boilerplate")%>
+
+<h1>All listings</h1>
+
+<!-- <form action="/listings/new" method="GET">
+    <button>Create New Listing</button>
+  </form> -->
+<!-- <a href="http://localhost:8080/listings/new">new listing</a> -->
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-2 row-cols-1">
+  <% for(let listing of allListings) { %>
+    <a href="/listings/<%= listing._id%>" class="listing-links">
+  <div class="card col" ">
+    <img
+      src="<%= listing.image%>"
+      class="card-img-top"
+      alt="listing_image"
+      style="width: 20rem"
+    />
+    <div class="card-img-overlay">a</div>
+    <div class="card-body">
+      <p class="card-text">
+        <b><%= listing.title %></b>
+
+        <br />
+        &#8377; <%= listing.price.toLocaleString("en-IN") %> / night
+      </p>
+    </div>
+  </div>
+  </a>
+
+  <% } %>
+</div>
+
+<!-- <ul>
+  <% for(let listing of allListings) { %>
+  <li>
+    <a href="/listings/<%= listing._id %>"><%= listing.title %></a>
+  </li>
+
+  <% } %>
+</ul> -->
