--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,38 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shelterly</title>
-  </head>
-  <body>
-    <h2>New listings</h2>
-    <form action="/listings" method="post">
-      <label for="title">Title:</label>
-      <input type="text" placeholder="Enter title" name="title" id="" />
-      <br />
-      <label for="description">Description:</label>
-      <textarea
-        name="description"
-        placeholder="Enter description"
-        id=""
-        rows="4"
-        cols="30"
-      ></textarea>
-      <br />
-      <label for="title">Image:</label>
-      <input type="text" placeholder="Enter image url" name="image" id="" />
-      <br />
-      <label for="price">Price:</label>
-      <input type="number" placeholder="Enter price" name="price" id="" />
-      <br />
-      <label for="location">Location:</label>
-      <input type="text" placeholder="Enter location" name="location" id="" />
-      <br />
-      <label for="country">Country:</label>
-      <input type="text" placeholder="Enter country" name="country" id="" />
-      <br />
-      <button type="submit">Create Listing</button>
+<% layout("/layouts/boilerplate") %>
+<div class="row mt-3">
+  <div class="col-8 offset-2">
+    <h3 class="mt-3 mb-2">Create a New Listing</h3>
+    <form
+      action="/listings"
+      method="POST"
+      class="needs-validation"
+      novalidate
+      enctype="multipart/form-data"
+    >
+      <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input
+          name="listing[title]"
+          type="text"
+          class="form-control"
+          placeholder="Add a catchy title"
+          required
+        />
+        <div class="valid-feedback">Title looks good!</div>
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea
+          name="listing[description]"
+          class="form-control"
+          required
+        ></textarea>
+        <div class="invalid-feedback">Please enter a short description</div>
+      </div>
+      <div class="mb-3">
+        <label for="image" class="form-label">Upload Listing Image</label>
+        <input
+          name="listing[image]"
+          type="file"
+          class="form-control"
+          required
+        />
+      </div>
+      <div class="row">
+        <div class="mb-3 col-md-4">
+          <label for="price" class="form-label">Price</label>
+          <input
+            name="listing[price]"
+            placeholder="1200"
+            class="form-control"
+            required
+          />
+          <div class="invalid-feedback">Price should be valid</div>
+        </div>
+        <div class="mb-3 col-md-8">
+          <label for="country" class="form-label">Country</label>
+          <input
+            name="listing[country]"
+            placeholder="India"
+            type="text"
+            class="form-control"
+            required
+          />
+          <div class="invalid-feedback">Country name should be valid</div>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="location" class="form-label">Location</label>
+        <input
+          name="listing[location]"
+          placeholder="Jaipur, Rajasthan"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="invalid-feedback">Location should be valid</div>
+      </div>
+      <button class="btn btn-dark my-3 add-btn">Add</button>
     </form>
-  </body>
-</html>
+  </div>
+</div>
