--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,24 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shelterly</title>
-  </head>
-  <body>
-    <h2>Listing details</h2>
-    <ul>
-      <li>Title: <%= listing.title %></li>
-      <li>Description: <%= listing.description %></li>
-      <li>Price: &#8377; <%= listing.price.toLocaleString() %></li>
-      <li>Location: <%= listing.location %></li>
-      <li>Country:<%= listing.country%></li>
-    </ul>
-    <br />
-    <a href="/listings/<%= listing._id%>/edit">Edit this listing</a>
-    <br />
-    <form method="POST" action="/listings/<%= listing._id%>?_method=DELETE">
-      <button>Delete this listing</button>
-    </form>
-  </body>
-</html>
+<% layout("/layouts/boilerplate")%>
+
+<div class="row mt-3">
+  <div class="col-8 offset-3">
+    <h2>Listing Details</h2>
+  </div>
+  <div class="card col-8 offset-3">
+    <img
+      src="<%= listing.image %>"
+      class="card-img-top show-img"
+      alt="listing_image"
+    />
+    <div class="card-body">
+      <p class="card-text">
+        <b> <%= listing.title %> </b><br />
+        <%= listing.description %> <br />
+        &#8377; <%= listing.price.toLocaleString("en-IN") %> / night
+        <br />
+        <%= listing.location %>
+        <br />
+        <%= listing.country %>
+      </p>
+    </div>
+  </div>
+
+  <br />
+  <div class="btns col-8 offset-3">
+    <a href="/listings/<%= listing._id%>/edit" class="btn btn-dark   edit-btn"
+    >Edit </a
+  >
+  <br />
+  <form method="POST" action="/listings/<%= listing._id%>?_method=DELETE">
+    <button class="btn btn-dark  ">Delete</button>
+  </div>
+  
+  </form>
+</div>
