--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -2,13 +2,7 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
     <h3 class="mt-3 mb-2">Create a New Listing</h3>
-    <form
-      action="/listings"
-      method="POST"
-      class="needs-validation"
-      novalidate
-      enctype="multipart/form-data"
-    >
+    <form action="/listings" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input
@@ -33,10 +27,11 @@
         <label for="image" class="form-label">Upload Listing Image</label>
         <input
           name="listing[image]"
-          type="file"
           class="form-control"
+          type="text"
           required
         />
+        <div class="invalid-feedback">Please upload an image</div>
       </div>
       <div class="row">
         <div class="mb-3 col-md-4">
